--- a/pages/reference.html
+++ b/pages/reference.html
@@ -33,5 +33,14 @@
           </div>
         </div>
     </nav>
+
+    <div class="container">
+      <h1 class="display-3 mt-4">Reference</h1>
+      <div class="clearfix mt-2 ml-2 mr-2">
+        <p>
+          A paragraph of placeholder text. We're using it here to show the use of the clearfix class. We're adding quite a few meaningless phrases here to demonstrate how the columns interact here with the floated image.
+        </p>
+      </div>
+    </div>
 </body>
 </html>
