--- a/pages/introduction.html
+++ b/pages/introduction.html
@@ -34,7 +34,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container custom-container">
       <h1 class="display-3 mt-4">EMIT</h1>
       <div class="clearfix mt-2 ml-2 mr-2">
         <img src="../image/cape.jpg" class="col-md-6 float-md-end mb-3 ms-md-3 rounded" alt="tset">
