--- a/pages/introduction.html
+++ b/pages/introduction.html
@@ -34,7 +34,8 @@
         </div>
     </nav>
 
-    <div class="container custom-container">
+    <div class="container">
+      <div class="custom-container mx-auto">
       <h1 class="display-3 mt-4">EMIT</h1>
       <div class="clearfix mt-2 ml-2 mr-2">
         <img src="../image/cape.jpg" class="col-md-6 float-md-end mb-3 ms-md-3 rounded" alt="tset">
@@ -92,6 +93,7 @@
           And yet, here you are, still persevering in reading this placeholder text, hoping for some more insights, or some hidden easter egg of content. A joke, perhaps. Unfortunately, there's none of that here.
         </p>
       </div>
+    </div>
     </div>
 </body>
 </html>
