--- a/pages/reference.html
+++ b/pages/reference.html
@@ -35,11 +35,21 @@
     </nav>
 
     <div class="container">
+      <div class="custom-container mx-auto">
       <h1 class="display-3 mt-4">Reference</h1>
       <div class="clearfix mt-2 ml-2 mr-2">
-        <p>
-          A paragraph of placeholder text. We're using it here to show the use of the clearfix class. We're adding quite a few meaningless phrases here to demonstrate how the columns interact here with the floated image.
-        </p>
+        <h1 class="h4 mt-4"><li>Data Resource</li></h1>
+        <p class="p-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="https://earth.jpl.nasa.gov/emit/data/data-portal/coverage-and-forecasts/"><u>EMIT Imaging Spectroscopy Data</u></a></p>
+        <h1 class="h4 mt-4"><li>Indicator Anaysis</li></h1>
+        <p class="p-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="https://www.tiri.narl.org.tw/Publication/InstTdy_Full/2300?PubId=220"><u>Taiwan Instrument Research Institute</u></a></p>
+        <h1 class="h4 mt-4"><li>Paper</li></h1>
+        <p class="p-2">Dahlin, K. M., Asner, G. P., & Field, C. B. (2013). Environmental and community controls on plant canopy chemistry in a Mediterranean-type ecosystem. Proceedings of the National Academy of Sciences, 110(17), 6895–6900. https://doi.org/10.1073/pnas.1215513110</p>
+        <p class="p-2">Gholizadeh, H., Gamon, J. A., Townsend, P. A., Zygielbaum, A. I., Helzer, C. J., Hmimina, G. Y., Yu, R., Moore, R. M., Schweiger, A. K., & Cavender-Bares, J. (2019). Detecting prairie biodiversity with airborne remote sensing. Remote Sensing of Environment, 221, 38–49. https://doi.org/10.1016/j.rse.2018.10.037</p>
+        <p class="p-2">Mulder, V. L., de Bruin, S., Schaepman, M. E., & Mayr, T. R. (2011). The use of remote sensing in soil and terrain mapping—A review. Geoderma, 162(1), 1–19. https://doi.org/10.1016/j.geoderma.2010.12.018</p>
+        <p class="p-2">Schnitzler, J., Barraclough, T. G., Boatwright, J. S., Goldblatt, P., Manning, J. C., Powell, M. P., Rebelo, T., & Savolainen, V. (2011). Causes of Plant Diversification in the Cape Biodiversity Hotspot of South Africa. Systematic Biology, 60(3), 343–357. https://doi.org/10.1093/sysbio/syr006</p>
+        <p class="p-2">Ustin, S. L., & Gamon, J. A. (2010). Remote sensing of plant functional types. New Phytologist, 186(4), 795–816. https://doi.org/10.1111/j.1469-8137.2010.03284.x</p>
+        <p class="p-2">Wang, R., & Gamon, J. A. (2019). Remote sensing of terrestrial plant biodiversity. Remote Sensing of Environment, 231, 111218. https://doi.org/10.1016/j.rse.2019.111218</p>
+      </div>
       </div>
     </div>
 </body>
