--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="./modules/tailwind.css"></script>
     <script src="./modules/bootstrap.min.js"></script>
     <link href="./modules/bootstrap.min.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Bio-Hotspots</title>
 </head>
 <body>
   <nav class="bg-gray-800">
@@ -35,6 +35,7 @@
         <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
           <div class="flex flex-shrink-0 items-center">
             <img class="h-8 w-auto" src="image/cape.jpg" alt="Logo">
+            <span class="text-white text-lg font-bold pl-4">Bio-Hotspots</span>
           </div>
           <div class="hidden sm:ml-6 sm:block">
             <div class="flex space-x-4">
