--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
           <div class="flex flex-shrink-0 items-center">
             <img class="h-8 w-auto" src="image/cape.jpg" alt="Logo">
-            <span class="text-white text-lg font-bold pl-4">Bio-Hotspots</span>
+            <span class="text-white text-lg font-bold font-italic pl-4">Bio-Hotspots</span>
           </div>
           <div class="hidden sm:ml-6 sm:block">
             <div class="flex space-x-4">
