--- a/pages/introduction.html
+++ b/pages/introduction.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../image/cape.jpg" type="image/x-icon">
+    <link rel="icon" href="../image/plants.png" type="image/x-icon">
     <script src="../modules/jquery.min.js"></script>
     <link rel="stylesheet" href="../index.css">
     <script src="../modules/tailwind.css"></script>
@@ -32,7 +32,7 @@
         </div>
         <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
           <div class="flex flex-shrink-0 items-center">
-            <img class="h-8 w-auto" src="../image/cape.jpg" alt="Logo">
+            <img class="h-8 w-auto" src="../image/plants.png" alt="Logo">
             <span class="text-white text-lg font-bold font-italic pl-4">Bio-Hotspots</span>
           </div>
           <div class="hidden sm:ml-6 sm:block">
@@ -66,7 +66,7 @@
         <h1 class="text-secondary font-bold font-italic mb-1 custom-font-size">Key points</h1>
         <li class="text-justify text-secondary pl-2">The plant biodiversity in the Cape Floristic Region of South Africa is extremely rich! But species here are facing the crisis of rapid disappearance.</li>
         <li class="text-justify text-secondary pl-2">EMIT data has a detailed hyperspectral signature around this region, which can help us in identify plant biodiversity hotspots.</li>
-        <li class="text-justify text-secondary pl-2">We use spectral diversity as variability in leaf traits indicators to discover plant biodiversity hot spot.</li>
+        <li class="text-justify text-secondary pl-2">We use spectral diversity as variability in leaf traits indicators to discover plant biodiversity hotspots.</li>
         <h1 class="display-6 mt-3 mb-2">About EMIT Data</h1>
         <div class="clearfix mt-2 ml-2 mr-2">
           <img src="../image/EMIT.jpg" class="col-md-6 float-md-end mb-3 ms-md-3 rounded" alt="EMIT Introduction" title="attribution: NASA">
@@ -86,8 +86,11 @@
         <div class="clearfix mt-2 ml-2 mr-2">
           <img src="../image/cape.jpg" class="col-md-6 float-md-end mb-3 ms-md-3 rounded" alt="cape map" title="attribution: NASA">
         
-          <p>
-            A paragraph of placeholder text. We're using it here to show the use of the clearfix class. We're adding quite a few meaningless phrases here to demonstrate how the columns interact here with the floated image.
+          <p class="text-justify pt-2">
+            As it is currently acknowledged, there are six floral kingdoms in the world. The South African Kingdom is the smallest among them, encompassing only the Cape region, covering approximately 90,000 square kilometers.
+The Cape region of South Africa stands out as one of the most extraordinary biodiversity hotspots, boasting a flora that comprises over 9,000 plant species, with nearly 70% of which are endemic.
+Unfortunately, this area is also under threat of, changing wildfire regimes, habitat destruction and climate change.
+We need to take action!
           </p>
         </div>
       </div>
