--- a/pages/analysis.html
+++ b/pages/analysis.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../image/plants.png" type="image/x-icon">
+    <link rel="icon" href="../image/plants.png" type="image/x-icon" attribution="https://icons8.com/icon/q2Ni6jgYWAUK/sprout">
     <script src="../modules/jquery.min.js"></script>
     <link rel="stylesheet" href="../index.css">
     <script src="../modules/tailwind.css"></script>
@@ -32,7 +32,7 @@
         </div>
         <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
           <div class="flex flex-shrink-0 items-center">
-            <img class="h-8 w-auto" src="../image/plants.png" alt="Logo">
+            <img class="h-8 w-auto" src="../image/plants.png" alt="Logo" attribution="https://icons8.com/icon/q2Ni6jgYWAUK/sprout">
             <span class="text-white text-lg font-bold font-italic pl-4">Bio-Hotspots</span>
           </div>
           <div class="hidden sm:ml-6 sm:block">
@@ -64,12 +64,12 @@
     <div class="custom-container mx-auto">
       <h1 class="display-3 mt-4">Analysis</h1>
 
-      <h1 class="display-6 mt-4 mb-2">Method</h1>
+      <h1 class="display-6 mt-4 mb-2">Data pre-processing</h1>
       <div class="clearfix mt-2 ml-2 mr-2">
-        <p class="text-justify mb-1">We start by downloading the hyperspectral map from NASA's EMIT mission official website and then perform orthorectification. Afterward, we normalize the data using various indices, such as NDVI.</p>
+        <p class="text-justify mb-1">We start by downloading the hyperspectral map from NASA's EMIT mission official website and then perform orthorectification. Afterward, we normalize the data using various indices, such as NDVI, NDWI and NDMI.</p>
         <h1 class="custom-font-size mb-1"><li>NDVI</li></h1>
         <div class="pl-5">
-          <img src="../image/EMIT.jpg" class="col-md-6 float-md-center mb-3 ms-md-3 rounded" alt="EMIT Introduction" title="attribution: NASA">
+          <img src="../image/NDVI.jpg" class="col-md-6 float-md-center mb-3 ms-md-3 rounded" alt="EMIT Introduction" title="attribution: NASA">
       
           <p class="text-justify font-bold">
             Normalized Difference Vegetation Index (NDVI):
@@ -78,27 +78,27 @@
             NDVI is closely linked to the presence of vegetation. Elevated NDVI values indicate regions that exhibit greater reflection in the near-infrared spectrum. Increased near-infrared reflectance is indicative of more abundant plant growth.
           </p>
           <p class="text-justify">
-            We use NDVI <span class="font-italic">((842nm-665nm)/(842nm+665nm)) < 0.35</span> to remove low vegetation area.
+            We use NDVI <span class="font-italic">((842nm-665nm)/(842nm+665nm)) < 0.35</span> to remove low vegetation areas.
           </p>
         </div>
 
         <h1 class="custom-font-size mb-1 mt-3"><li>NDWI</li></h1>
         <div class="pl-5">
-          <img src="../image/EMIT.jpg" class="col-md-6 float-md-center mb-3 ms-md-3 rounded" alt="EMIT Introduction" title="attribution: NASA">
+          <img src="../image/NDWI.jpg" class="col-md-6 float-md-center mb-3 ms-md-3 rounded" alt="EMIT Introduction" title="attribution: NASA">
           <p class="text-justify font-bold">
             Normalized Difference Water Index (NDWI):
           </p>
           <p class="text-justify">
-            NDWI utilizes the green and near-infrared bands of remote sensing imagery and is particularly responsive to the presence of water area.
+            NDWI utilizes the green and near-infrared bands of remote sensing imagery and is particularly responsive to the presence of water areas.
           </p>
           <p class="text-justify">
-            We use NDWI <span class="font-italic">((560nm -842nm)/(560nm +842nm)) > 0 </span> to remove water area.
+            We use NDWI <span class="font-italic">((560nm -842nm)/(560nm +842nm)) > 0 </span> to remove water areas.
           </p>
         </div>
 
         <h1 class="custom-font-size mb-1 mt-3"><li>NDMI</li></h1>
         <div class="pl-5">
-          <img src="../image/EMIT.jpg" class="col-md-6 float-md-center mb-3 ms-md-3 rounded" alt="EMIT Introduction" title="attribution: NASA">
+          <img src="../image/NDMI.jpg" class="col-md-6 float-md-center mb-3 ms-md-3 rounded" alt="EMIT Introduction" title="attribution: NASA">
           <p class="text-justify font-bold">
             Normalized Difference Moisture Index (NDMI):
           </p>
@@ -109,6 +109,19 @@
             We use NDMI <span class="font-italic">((842nm-1610nm)/(842nm+1610nm)) > 0.2 </span> to remove farm because natural vegetation is drier than agricultural land in the Cape of South Africa.
           </p>
         </div>
+      </div>
+
+      <h1 class="display-6 mt-4 mb-2">Method</h1>
+      <div class="clearfix mt-2 ml-2 mr-2">
+        <p class="text-justify">
+          In our hypothesis, where regions with high plant biodiversity represent a relatively small proportion of the total considered areas. Due to numerous rare species concentrated in the area, it is expected that the vegetation in these regions would exhibit the greatest difference from that of other areas.  These differences will reflect on the spectrum.
+        </p>
+        <p class="text-justify pt-2">
+          To find the plant biodiversity, we calculate Z-score for specific wavelength intervals in the spectral data of each pixel. These Z-score data could help identify grid points with the most significant deviations in spectrum.
+        </p>
+        <p class="text-justify pt-2">
+          Subsequently, creating maps that colored with Z-score will facilitate the identification of areas with the plant biodiversity hotspot.
+        </p>
       </div>
 
       <h1 class="display-6 mt-4 mb-2">Result</h1>
