--- a/pages/reference.html
+++ b/pages/reference.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../image/plants.png" type="image/x-icon">
+    <link rel="icon" href="../image/plants.png" type="image/x-icon" attribution="https://icons8.com/icon/q2Ni6jgYWAUK/sprout">
     <script src="../modules/jquery.min.js"></script>
     <link rel="stylesheet" href="../index.css">
     <script src="../modules/tailwind.css"></script>
@@ -32,7 +32,7 @@
         </div>
         <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
           <div class="flex flex-shrink-0 items-center">
-            <img class="h-8 w-auto" src="../image/plants.png" alt="Logo">
+            <img class="h-8 w-auto" src="../image/plants.png" alt="Logo" attribution="https://icons8.com/icon/q2Ni6jgYWAUK/sprout">
             <span class="text-white text-lg font-bold font-italic pl-4">Bio-Hotspots</span>
           </div>
           <div class="hidden sm:ml-6 sm:block">
