--- a/pages/analysis.html
+++ b/pages/analysis.html
@@ -126,12 +126,12 @@
 
       <h1 class="display-6 mt-4 mb-2">Result</h1>
       <div class="clearfix mt-2 ml-2 mr-2">
-        <img src="../image/cape.jpg" class="col-md-6 float-md-end mb-3 ms-md-3 rounded" alt="cape map" title="attribution: NASA">
-      
-        <p>
-          A paragraph of placeholder text. We're using it here to show the use of the clearfix class. We're adding quite a few meaningless phrases here to demonstrate how the columns interact here with the floated image.
-        </p>
+        <img src="../image/band1_381_2492nm.png" class="col-md-5 float-md-start mb-3 ms-md-3 rounded" alt="band1">
+        <img src="../image/band2_700_1400nm.png" class="col-md-5 float-md-end mb-3 ms-md-3 rounded" alt="band2">
       </div>
+      <p class="text-justify">
+        A paragraph of placeholder text. We're using it here to show the use of the clearfix class. We're adding quite a few meaningless phrases here to demonstrate how the columns interact here with the floated image.
+      </p>
     </div>
   </div>
 </body>
