--- a/pages/analysis.html
+++ b/pages/analysis.html
@@ -130,7 +130,9 @@
         <img src="../image/band2_700_1400nm.png" class="col-md-5 float-md-end mb-3 ms-md-3 rounded" alt="band2">
       </div>
       <p class="text-justify">
-        A paragraph of placeholder text. We're using it here to show the use of the clearfix class. We're adding quite a few meaningless phrases here to demonstrate how the columns interact here with the floated image.
+        This is our Z-score analysis result, we successfully distinguish water and farm from vegetation, but we had a hard time in buildings and sand distinguishing.
+So, in the last step we manully pick the hot spot accroding to Z-score value and Satellite imagery.
+Hotspots search results are presented as interactive map.
       </p>
     </div>
   </div>
