--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="./modules/tailwind.css"></script>
     <script src="./modules/bootstrap.min.js"></script>
     <link href="./modules/bootstrap.min.css" rel="stylesheet">
-    <title>Bio-Hotspots</title>
+    <title>Biodiversity Hotspot Explorer</title>
 </head>
 <body>
   <nav class="bg-gray-800">
